Added profile servlet and ftl, Updated login servlet and ftl, fixed flashMessageFilter